@@ -29,16 +29,17 @@ var CloudCommander, Util, DOM, $, Github, cb;
         console.time('github load');
         
         var lDir = './lib/client/storage/github/';
-        DOM.anyLoadOnLoad([
-            lDir + 'github.js',
-            lDir + 'lib/base64.js',
-            lDir + 'lib/underscore.js'],
-            
-            function(){
-                console.timeEnd('github load');
-                DOM.Images.hideLoad();
+        DOM.jsload(lDir + 'github.js', function(){
+            DOM.anyLoadOnLoad([
+                lDir + 'lib/base64.js',
+                lDir + 'lib/underscore.js'],
                 
-                Util.exec(pCallBack);
+                function(){
+                    console.timeEnd('github load');
+                    DOM.Images.hideLoad();
+                    
+                    Util.exec(pCallBack);
+            });
         });
     }
     
