@@ -23,11 +23,11 @@ var CloudCommander, Util, DOM, $;
         console.time('terminal load');
         
         var lDir = 'lib/client/terminal/jquery-terminal/jquery.';
-        DOM.cssLoad(lDir + 'terminal.css');        
         
-        DOM.anyLoadOnLoad([
+        DOM.anyLoadInParallel([
             lDir + 'terminal.js',
-            lDir + 'mousewheel.js'],
+            lDir + 'mousewheel.js',
+            lDir + 'terminal.css'],
             
             function(){
                 console.timeEnd('terminal load');
