@@ -28,8 +28,7 @@ var Util, exports;
      * @param pName - получает имя файла
      * @param pExt - расширение
      */
-    Util.checkExtension                = function(pName, pExt)
-    {
+    Util.checkExtension                = function(pName, pExt){
         /* если длина имени больше
          * длинны расширения - 
          * имеет смысл продолжать
@@ -117,6 +116,49 @@ var Util, exports;
      */
     Util.removeStr              = function(pStr, pSubStr){
         return pStr.replace(pSubStr,'');
+    };
+        
+    /**
+     * invoke a couple of functions in paralel
+     * 
+     * @param {Array} pFuncs
+     * @param {function} pCallback
+     * 
+     * Example:
+     * i >=0, pFuncs[i] = function(param, callback){}
+     */
+    Util.paralelExec            = function(pFuncs, pCallback){
+        var done = [];
+        
+        /* add items to array done*/
+        function addFunc(pNum){
+            done.push(pNum);
+        }
+        
+        /* 
+         * improve callback of funcs so
+         * we pop number of function and
+         * if it's last we call pCallBack
+         */
+        function doneFunc(pParams){
+            Util.exec(pParams.callback);
+            
+            var lNum = done.pop (pParams.number);
+            if(!lNum){
+                Util.exec(pCallback);
+            }
+        }
+        
+        for(var i = 0, n = pFuncs.length; i < n; i++){
+            addFunc(i);
+            
+            var lFunc = pFuncs[i].callback;
+            
+            pFuncs[i].callback = Util.retExec(doneFunc, {
+                number      : i,
+                callback    : lFunc
+            });
+        }
     };
     
     /**
